--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@
 	  aspect-ratio: 1 / 1;
 	  top: var(--hat-offset-y, -21px);        /* up(-) / down(+) */
 	  right: var(--hat-offset-x, -10px);       /* left(-) / right(+) */
-	  background: url("halloween-hat2.png") no-repeat center / contain;
+	  background: url("/img/halloween-hat2.png") no-repeat center / contain;
 	  pointer-events: none;
 	  z-index: 2;
 	}
